crates/plotnik-lib/tests/02-parser/recovery_incomplete/mixed_valid_invalid_captures.txt
(a) @ok @ @name
------------------ DIAGNOSTICS -------------------
error: expected a capture name after `@`
 --> query.ptk:1:9
  |
1 | (a) @ok @ @name
  |         ^
  |
help: captures attach to the pattern before them: `(node) @name`
